--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,9 @@
 {
-  "buildCommand": "npm install --prefix frontend && npm run build --prefix frontend",
+  "buildCommand": "if [ -d frontend ]; then cd frontend && npm install && npm run build; else echo 'Error: frontend directory not found' && ls -la && exit 1; fi",
   "outputDirectory": "frontend/dist",
-  "devCommand": "npm run dev --prefix frontend",
-  "installCommand": "npm install --prefix frontend",
+  "devCommand": "cd frontend && npm run dev",
+  "installCommand": "cd frontend && npm install",
   "framework": "vite",
-  "rootDirectory": ".",
   "rewrites": [
     {
       "source": "/(.*)",
