Simplify build command to match Vercel dashboard settings

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "if [ -d frontend ]; then cd frontend && npm install && npm run build; else echo 'Error: frontend directory not found' && ls -la && exit 1; fi",
+  "buildCommand": "cd frontend && npm run build",
   "outputDirectory": "frontend/dist",
   "devCommand": "cd frontend && npm run dev",
   "installCommand": "cd frontend && npm install",
