Fix vercel.json rewrites to exclude data files from SPA routing

--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
   "framework": "vite",
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/((?!assets|pedestrian_data\\.geojson|pedestrian_data\\.csv).*)",
       "destination": "/index.html"
     }
   ],
